--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -1,7 +1,6 @@
 global:
   scrape_interval: 15s
   evaluation_interval: 1m
-
   external_labels:
       monitor: 'Monitoring Server'
 
@@ -9,221 +8,42 @@ alerting:
   alertmanagers:
     - static_configs:
         - targets:
-            - "192.168.11.103:9093"
+            - "alertmanager:9093"
 
 rule_files:
   - /etc/prometheus/rules/*.yml
 
 scrape_configs:
+  # Self monitoring
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
 
-  - job_name: 'mysqld-exporter'
-    static_configs:
-      - targets: ['db-pdip-prod:9104']
-
-  - job_name: "Server Monitoring"
-    file_sd_configs:
-    - files:
-        - /etc/prometheus/server_targets.yml
-  
-  - job_name: 'Docker-Metrics'
-    scrape_interval: 10s
-    static_configs:
-      - targets: [
-          "mpp-api02:9323",
-          "api-mpp:9323"
-        ]
-
-  - job_name: "mktxp"
-    static_configs:
-      - targets: ["192.168.11.103:49090"]
-
-  - job_name: "Monitoring Docker Metrics"
-    static_configs:
-      - targets: [
-          "api-mpp:8080",
-          "mpp-api02:8080"
-        ]
-  
-  - job_name: 'db-cls-postgres'
-    static_configs:
-      - targets: ['db-dev01:9187']
-        labels:
-          node: db-dev01
-          role: primary
-      - targets: ['db-dev02:9188']
-        labels:
-          node: db-dev02
-          role: replica
-      - targets: ['pgpool:9120']
-        labels:
-          node: pgpool
-          role: proxy
-
-  - job_name: "Mikrotik"
-    static_configs:
-      - targets:
-        - "103.173.74.19"
-    metrics_path: /snmp
-    params:
-      module: [mikrotik]
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: 192.168.11.103:9116  # The SNMP exporter's real hostname:port.
-
-  - job_name: minio-merah
-    metrics_path: /minio/v2/metrics/cluster
-    scheme: http
-    static_configs:
-    - targets: ['192.168.11.106:9000']
-
-  - job_name: minio-mpp
-    metrics_path: /minio/v2/metrics/cluster
-    scheme: http
-    static_configs:
-    - targets: ['192.168.11.118:9000']
-  
-  - job_name: "website-monitoring-http"
-    metrics_path: /probe
-    params:
-      module: [http_2xx]
+  # Node exporter for all servers via Tailscale network
+  - job_name: 'node-exporter'
     file_sd_configs:
       - files:
-        - /etc/prometheus/http_websites.yml
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: blackbox-exporter:9115
+        - /etc/prometheus/tailscale_servers.yml
+    scrape_interval: 30s
 
-  - job_name: "website-monitoring-icmp"
-    metrics_path: /probe
-    params:
-      module: [icmp]
+  # MongoDB single instance monitoring
+  - job_name: 'mongodb'
     file_sd_configs:
       - files:
-        - /etc/prometheus/http_websites.yml
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: blackbox-exporter:9115
-  # # - job_name: "website-monitoring-http"
-  # #   metrics_path: /probe
-  # #   params:
-  # #     module: [http_2xx]
-  # #   file_sd_configs:
-  # #     - files:
-  # #       - /etc/prometheus/website_targets.yml
-  # #   relabel_configs:
-  # #     - source_labels: [__address__]
-  # #       target_label: __param_target
-  # #     - source_labels: [__param_target]
-  # #       target_label: instance
-  # #     - target_label: __address__
-  # #       replacement: blackbox-exporter:9115
+        - /etc/prometheus/mongodb_targets.yml
+    scrape_interval: 30s
 
-  # # - job_name: "website-monitoring-icmp"
-  # #   metrics_path: /probe
-  # #   params:
-  # #     module: [icmp]
-  # #   file_sd_configs:
-  # #     - files:
-  # #       - /etc/prometheus/website_targets.yml
-  # #   relabel_configs:
-  # #     - source_labels: [__address__]
-  # #       target_label: __param_target
-  # #     - source_labels: [__param_target]
-  # #       target_label: instance
-  # #     - target_label: __address__
-  # #       replacement: blackbox-exporter:9115
-  # - job_name: "blackbox-http"
-  #   metrics_path: /probe
-  #   params:
-  #     module: [http_2xx]
-  #   # file_sd_configs:
-  #   #    - files:
-  #   #      - /etc/prometheus/http-website.yml
-  #   static_configs:
-  #     - targets:
-  #       - https://pdiperjuangan.id
-  #       - https://pdipkreatif.id
-  #       - https://pantau.pdiperjuangan.id
-  #       - https://mpp-api.pdiperjuangan.id
-  #       - https://sateknologi.id
-  #       - https://live-brief.businessliveoperationxmpp.com
-  #       - https://stgcms.pdiperjuangan.id
-  #       - https://stgweb.pdiperjuangan.id
-  #       - https://cms.pdiperjuangan.id
-  #       - https://stgweb.mugshot.dev
-  #       - https://stgdata.mugshot.dev
-  #   relabel_configs:
-  #     - source_labels: [__address__]
-  #       target_label: __param_target
-  #     - source_labels: [__param_target]
-  #       target_label: instance
-  #     - target_label: __address__
-  #       replacement: 192.178.11.103:9115
+  # Docker container monitoring via cAdvisor
+  - job_name: 'docker'
+    file_sd_configs:
+      - files:
+        - /etc/prometheus/docker_targets.yml
+    scrape_interval: 30s
 
-  # - job_name: "blackbox-icmp"
-  #   metrics_path: /probe
-  #   params:
-  #     module: [icmp]
-  #   static_configs:
-  #     - targets:
-  #         - 103.160.62.200
-  #         - 8.8.8.8
-  #         - 1.1.1.1
-  #         - pdiperjuangan.id
-  #         - pdipkreatif.id
-  #         - pantau.pdiperjuangan.id
-  #         - mpp-api.pdiperjuangan.id
-  #         - sateknologi.id
-  #         - live-brief.businessliveoperationxmpp.com
-  #         - stgcms.pdiperjuangan.id
-  #         - stgweb.pdiperjuangan.id
-  #         - cms.pdiperjuangan.id
-  #         - stgweb.mugshot.dev
-  #         - stgdata.mugshot.dev
-  #   relabel_configs:
-  #     - source_labels: [__address__]
-  #       target_label: __param_target
-  #     - source_labels: [__param_target]
-  #       target_label: instance
-  #     - target_label: __address__
-  #       replacement: 192.178.11.103:9115
+  # PM2 services monitoring on remote servers
+  - job_name: 'pm2'
+    file_sd_configs:
+      - files:
+        - /etc/prometheus/pm2_targets.yml
+    scrape_interval: 30s
 
-  # - job_name: "blackbox-tcp"
-  #   metrics_path: /probe
-  #   params:
-  #     module: [tcp_connect]
-  #   # file_sd_configs:
-  #   #    - files:
-  #   #      - /etc/prometheus/icmp-websites.yml
-  #   static_configs:
-  #     - targets:
-  #         - pdiperjuangan.id
-  #         - pdipkreatif.id
-  #         - pantau.pdiperjuangan.id
-  #         - mpp-api.pdiperjuangan.id
-  #         - sateknologi.id
-  #         - live-brief.businessliveoperationxmpp.com
-  #         - stgcms.pdiperjuangan.id
-  #         - stgweb.pdiperjuangan.id
-  #         - cms.pdiperjuangan.id
-  #         - stgweb.mugshot.dev
-  #         - stgdata.mugshot.dev
-  #   relabel_configs:
-  #     - source_labels: [__address__]
-  #       target_label: __param_target
-  #     - source_labels: [__param_target]
-  #       target_label: instance
-  #     - target_label: __address__
-  #       replacement: 192.178.11.103:9115
